--- a/trabajo.css
+++ b/trabajo.css
@@ -1,8 +1,8 @@
-body {
-  margin: 0;
+body{
+  margin:0;
+  padding:0;
+  background:url();
+  background-size:cover;
+  background-position: center;
   font-family: sans-serif;
-}
-header{
- width: 100%;
- background-color: aliceblue;
 }
